# epp-final-project

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: appendix.tex  epp_final_project.tex  epp_final_project.toc  epp_final_project_pres.tex  task_paper.py
src/epp_final_project/: __init__.py  config.py
src/epp_final_project/analysis/: model.py  task_analysis.py
src/epp_final_project/data_management/: __init__.py  task_data_management.py
src/epp_final_project/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
