[metadata]
name = epp_final_project
description = Comparison of Three Panel Data Estimators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nebisimsek/epp_final_project
author = Nebi Simsek
author_email = s6nesims@uni-bonn.de
license = GNU General Public License v3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/nebisimsek/epp_final_project
    Documentation = https://github.com/nebisimsek/epp_final_project
    Github = https://github.com/nebisimsek/epp_final_project
    Tracker = https://github.com/nebisimsek/epp_final_project/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_final_project/_version.py
